<?xml version="1.0"?>
<package>
  <name>smart5six_gazebo_plugin</name>
  <version>1.0.0</version>
  <description>Comau Smart5Six gazebo plugin</description>

<maintainer email="iaslab@dei.unipd.it">IAS-Lab</maintainer><license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>gazebo_ros_plugins</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>controller_manager</build_depend> 
  <build_depend>ros_control_gazebo</build_depend> 
  <build_depend>pluginlib</build_depend> 
  <build_depend>industrial_robot_client</build_depend>
  <build_depend>industrial_utils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>gazebo_ros_plugins</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>controller_manager</run_depend> 
  <run_depend>ros_control_gazebo</run_depend> 
  <run_depend>pluginlib</run_depend> 
  <run_depend>industrial_robot_client</run_depend>
  <run_depend>industrial_utils</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
